fixed google translation js issues, removed translation.js/added to html.html.twig file, aligned translate/search block

--- a/docroot/themes/ci_xy/scss/layout/_header.scss
+++ b/docroot/themes/ci_xy/scss/layout/_header.scss
@@ -39,6 +39,11 @@
       }
     }
   }
+  .col-sm-4 {
+    @media (min-width: $screen-sm-min) {
+      text-align: right;
+    }
+  }
   // [3]
   &__search {
     display: inline-block;
